# Workspace for Project Euler's Problems

[profile.dev]
opt-level = 1

[workspace]
members = [
  "utils",
  "e001",
  "e002",
  "e003",
  "e004",
  "e005",
  "e006",
  "e007",
  "e008",
  "e009",
  "e010",
  "e011",
  "e012",
  "e013",
  "e014",
  "e015",
  "e016",
  "e017",
  "e018",
  "e019",
  "e020",
  "e021",
  "e022",
  "e023",
  "e024",
  "e025",
  "e026",
  "e027",
  "e028",
  "e029",
  "e030",
  "e031",
  "e032",
  "e033",
  "e034",
  "e035",
  "e036",
  "e037",
  "e038",
  "e039",
  "e040",
  "e041",
  "e042",
  "e043",
  "e044",
  "e045",
  "e046",
  "e047",
  "e048",
]
